# engine

./: CmakeLists.txt
modules/: CMakeLists.txt  main.cpp
modules/include/: ArraySize.h  DebugBreak.h  Engine.h  EngineContext.h  Log.h
modules/src/: ArraySize.cpp  DebugBreak.cpp  Engine.cpp  EngineContext.cpp
modules/src/platform/windows/: WindowsDebugBreak.cpp
shaders/: compile.py  shader.vert
src/: main.cpp
